--- a/src/main/resources/templates/allProducts.html
+++ b/src/main/resources/templates/allProducts.html
@@ -47,11 +47,11 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="mainMenu">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="http://localhost:8080">خانه</a></li>
             <li class="nav-item"><a class="nav-link" href="http://localhost:8080/allProduct">محصولات</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">ورود</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">عضویت</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://localhost:8080/login">ورود</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://localhost:8080/register">عضویت</a></li>
         </ul>
     </div>
 </nav>
