--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -28,8 +28,8 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="http://localhost:8080">خانه</a></li>
             <li class="nav-item"><a class="nav-link" href="http://localhost:8080/allProduct">محصولات</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">ورود</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">عضویت</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://localhost:8080/login">ورود</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://localhost:8080/register">عضویت</a></li>
         </ul>
     </div>
 </nav>
